[gd_scene load_steps=6 format=3 uid="uid://in0ylfxy7vfe"]

[ext_resource type="Script" path="res://scenes/ui/menus/crafting_menus/crafting_book/ingredient_panel/ingredient_panel.gd" id="1_crblw"]
[ext_resource type="Texture2D" uid="uid://bavk4a3vq7nos" path="res://resources/textures/crafting/widows_umbra.tres" id="2_vj1yu"]
[ext_resource type="PackedScene" uid="uid://bxkflma7lqn7u" path="res://tool_tip_component.tscn" id="3_g30lq"]
[ext_resource type="PackedScene" uid="uid://dri8sutbtih3p" path="res://ingredient_tooltip.tscn" id="4_oe3ll"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ywhos"]

[node name="IngredientPanel" type="Panel"]
custom_minimum_size = Vector2(65, 50)
theme_override_styles/panel = SubResource("StyleBoxEmpty_ywhos")
script = ExtResource("1_crblw")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
offset_right = 50.0
offset_bottom = 50.0
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="IngredientTexture" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_vj1yu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 35.0
offset_top = 29.0
offset_right = 68.0
offset_bottom = 51.0
theme_override_constants/separation = 0

[node name="PlayerInventoryCount" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "*"
horizontal_alignment = 2

[node name="Slash" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "/"
horizontal_alignment = 2

[node name="IngredientCount" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "1"
horizontal_alignment = 2

[node name="ToolTipComponent" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("3_g30lq")]
position = Vector2(224, 43)
parent = NodePath("..")
tooltip_ui_scene = ExtResource("4_oe3ll")
